Update quick card links

--- a/index.html
+++ b/index.html
@@ -78,20 +78,13 @@
       <h2>Quick Links</h2>
       <section id="quick-link-card-container">
         <div class="card quick-link-card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">
-          <h3>Calendar</h3>
-          <ul>
-            <li><a class="blue-link" href="calendar/wpl.html">Office Hours Schedule</a></li>
-            <li><a class="blue-link" href="exploration-sessions/exploration-sessions.html">Exploration Sessions</a></li>
-            <li><a class="blue-link" href="mentorship/mentorship.html">Mentorship Program</a></li>
-          </ul>
+          <h3><a class="blue-link" href="calendar/wpl.html">Office Hours Schedule</a></h3>
         </div>
         <div class="card quick-link-card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">
-          <h3>Resources</h3>
-          <ul>
-            <li><a class="blue-link" href="#">Resource Link</a></li>
-            <li><a class="blue-link" href="#">Resource Link</a></li>
-            <li><a class="blue-link" href="#">Resource Link</a></li>
-          </ul>
+          <h3><a class="blue-link" href="exploration-sessions/exploration-sessions.html">Exploration Sessions</a></h3>
+        </div>
+        <div class="card quick-link-card" data-aos="fade-right" data-aos-once="true" data-aos-duration="1000">
+          <h3><a class="blue-link" href="mentorship/mentorship.html">Mentorship Program</a></h3>
         </div>
       </section>
     </section>
